@@ -432,6 +432,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   had stict standards issues with setFakeSlaveLag() and setFakeMaster().
 * (bug 451) Improve the phrase mappings of the Chinese converter arrays.
 * (bug 12487) Rights log is not fully internationalized
+* (bug 10837) Language variants no longer override other languages than base
 
 === API changes in 1.13 ===
 
